--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,11 +7,12 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -20,10 +21,10 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build    # ensure this outputs into ./build
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.PAT_GITHUB }}   # or GITHUB_TOKEN
+          github_token: ${{ secrets.PAT_GITHUB }}
           publish_dir: ./build
